# 034-sentiment-momentum-fusion

./: README.md  README.ru.md  readme.simple.ru.md
rust_sentiment_momentum/: .gitignore  Cargo.toml  README.md
rust_sentiment_momentum/examples/: calculate_momentum.rs  fetch_bybit_data.rs  full_strategy.rs  sentiment_signals.rs
rust_sentiment_momentum/src/: lib.rs  main.rs
rust_sentiment_momentum/src/api/: bybit.rs  mod.rs  types.rs
rust_sentiment_momentum/src/models/: mod.rs  types.rs
rust_sentiment_momentum/src/momentum/: mod.rs  price.rs  sentiment.rs
rust_sentiment_momentum/src/sentiment/: aggregator.rs  analyzer.rs  mock_data.rs  mod.rs
rust_sentiment_momentum/src/signals/: divergence.rs  fusion.rs  mod.rs
